--- a/client/app/css/styles.css
+++ b/client/app/css/styles.css
@@ -5,3 +5,71 @@ body {
 .hidden {
     display: none;
 }
+
+
+#tdescription{
+	letter-spacing: 1px;
+	word-spacing: 3px;
+	text-align: justify;
+}
+
+.fb-plugin{
+	margin-top: 20px;
+	padding-bottom: 50px;
+	margin-left: auto ;
+    margin-right: auto ;
+}
+
+
+#ttitle {
+	text-align: center;
+	font-weight: bold;
+}
+
+#tsubtitle {
+	padding-left: 200px;
+	padding-right: 200px;
+	text-align: justify;
+}
+
+#tauthors {
+	padding-left: 200px;
+	padding-right: 200px;
+	margin-bottom: 50px;
+}
+#tdescription {
+	padding-left: 200px;
+	padding-right: 200px;
+	margin-bottom: 50px;
+}
+
+#left {
+	float: left;
+}
+
+#right {
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 15%
+	padding-right:15%;
+}
+
+h3 {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: 300;
+	line-height: 1.5;
+	li
+	font-style: italic;
+	font-style: italic;
+	font-size: 20px;
+}
+
+#newform  {
+	padding-left: 200px;
+	padding-right: 200px;
+}
+
+#viewAll{
+	padding-left: 200px;
+	padding-right: 200px;
+}
